# music-collection

./: .flake8  .gitignore  .pre-commit-config.yaml  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
contrib/: env-sample
song/: settings.py  urls.py
song/contrib/: env-sample
