[tool.poetry]
name = "music-collection"
version = "0.1.0"
description = "Repository for studies with Django, Django Rest Framework, Docker"
authors = ["alison.americo <alison.americo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pre-commit = "^2.9.3"
black = "^20.8b1"

[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
